# backy

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .hgignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGES.txt  COPYRIGHT.txt  FORMATS.txt  HACKING.txt  IDEAS.txt  MANIFEST.in  README.md  README.txt  bootstrap.py  build-and-test.sh  buildout.cfg  default.nix  flake.nix  input-file  lib.nix  pyproject.toml  pytest.ini  release.nix  release_helper.py  requirements.txt  run-drone-io  s3experiment.py  schedule.py  setup.cfg  setup.py  shell.nix  smoketest.sh  version.txt  versions.cfg
.github/: pull_request_template.md
.github/workflows/: pre-commit.yml  python-app.yml
changelog.d/: 20230626_003312_jb.rst  20230626_003411_jb.rst  20230626_004408_jb_restore_default_values.rst  20230626_005101_jb_remove_find_and_nbd.rst  20230626_005413_jb_replace_telnet_with_http.rst  20230626_005856_jb_issue_30_server_migration.rst  20230703_144928_jb_PL_131601_fix_rev_parent.rst  20230703_164348_jb_remove_last_symlink.rst  20230713_031316_jb_issue_17_distrust_on_verification_failure.rst  20230713_031416_jb_issue_17_distrust_on_verification_failure.rst  20230825_170554_jb_PL_131650_iter_fix.rst  20230825_181711_jb_feature_nix_flake.rst  20230908_002924_jb_DIR_770_status_in_directory.rst  20231012_131825_jb_issue_56_telnet_jobs_hangs.rst  20231110_210927_jb_integrate_backy_extract.rst  20231207_235814_jb_reintroduce_find.rst  20231208_201510_jb_reintroduce_find.rst  20240205_012140_jb_issue_30_server_migration.rst  20240205_012340_jb_issue_30_server_migration.rst  20240312_145226_jb_pathlib.rst  20240312_145254_jb_pathlib.rst  20240402_125207_jb_issue_30_server_migration.rst  20240607_123138_jb_fix_backup_rc.rst  20240612_121019_jb_running_backup_sla.rst  20240812_133802_ct_PL_132755_refactor_module_and_subcommand_structure.rst  20241118_180122_jb_PL_133161_distrust_check.rst  20250205_130445_jb_2_5_bug_fixes.rst  20250205_130801_jb_2_5_propagate_worker_slots.rst  20250307_110556_jb_PL_133157_scan_quarantine_store_2_5.rst  20250429_152122_os_PL_133651_bump_python312.rst  20250611_120003_jb_PL_133453_rbd_whole_object.rst  20250818_140720_jb_debug.rst
doc/: Makefile  backy.conf.example  conf.py  hacking.rst  index.rst  man-backy.rst
src/backy/: __init__.py  api.py  archive.py  backup.py  client.py  conftest.py  daemon.py  ext_deps.py  fallocate.py  fusefs.py  logging.py  main.py  quarantine.py  report.py  repository.py  revision.py  schedtest.py  schedule.py  scheduler.py  scripts.py  source.py  stats.py  store.py  timeout.py  utils.py
src/backy/backends/: __init__.py  chunked.py  cowfile.py
src/backy/backends/chunked/: __init__.py  chunk.py  file.py  store.py
src/backy/backends/chunked/tests/: test_backend.py  test_chunk.py  test_file.py
src/backy/backends/s3/: __init__.py  bucketsnapshot.py  obj_types.py  store.py
src/backy/cli/: __init__.py  client.py
src/backy/cli/tests/: test_client.py  test_main.py
src/backy/daemon/: __init__.py  api.py  scheduler.py
src/backy/daemon/tests/: test_api.py  test_callback.sh  test_daemon.py  test_scheduler.py
src/backy/examples/: backy.conf
src/backy/file/: __init__.py
src/backy/file/tests/: test_file.py
src/backy/format/: __init__.py  diff.py  patch.py  read.py  roll.py  write.py
src/backy/nbd/: server.py
src/backy/operations/: __init__.py  backup.py  clean.py  ls.py  mount.py  restore.py  scrub.py
src/backy/rbd/: __init__.py  backup.py  conftest.py  quarantine.py  rbd.py  rbdsource.py  revision.py  source.py
src/backy/rbd/backends/: __init__.py
src/backy/rbd/backends/chunked/: __init__.py  file.py
src/backy/rbd/backends/chunked/tests/: test_file.py
src/backy/rbd/chunked/: __init__.py  chunk.py  file.py  store.py
src/backy/rbd/chunked/tests/: test_backend.py  test_chunk.py  test_file.py
src/backy/rbd/sources/: __init__.py  file.py
src/backy/rbd/sources/ceph/: __init__.py  diff.py  rbd.py  source.py
src/backy/rbd/sources/ceph/tests/: conftest.py  test_ceph_source.py  test_diff.py  test_rbd.py
src/backy/rbd/sources/flyingcircus/: source.py
src/backy/rbd/sources/flyingcircus/tests/: test_fc_source.py  test_source.py
src/backy/rbd/tests/: conftest.py  nodata.rbddiff  smoketest.sh  test_backup.py  test_backy-rbd.py  test_ceph.py  test_diff.py  test_main.py  test_quarantine.py  test_rbd.py  test_source.py
src/backy/s3/: __init__.py
src/backy/sources/: __init__.py  ceph.py  file.py  obj_types.py
src/backy/sources/ceph/: __init__.py  diff.py  rbd.py  source.py
src/backy/sources/ceph/tests/: conftest.py  test_ceph_source.py  test_diff.py  test_rbd.py
src/backy/sources/flyingcircus/: source.py
src/backy/sources/flyingcircus/tests/: test_source.py
src/backy/sources/s3/: source.py
src/backy/sources/s3/tests/: test_source.py
src/backy/tests/: __init__.py  conftest.py  d9t-backy-integration-test  test_api.py  test_archive.py  test_backup.py  test_backy.py  test_chunked.py  test_client.py  test_daemon.py  test_fallocate.py  test_main.py  test_quarantine.py  test_report.py  test_revision.py  test_schedule.py  test_scheduler.py  test_source.py  test_timeout.py  test_utils.py
src/backy/tests/samples/: delta_sample1.rev  full_sample1.backy  sample1.rev  sample2.rev
src/backy/tests/samples/scrub-consistent/: 528f6c52-d4a6-4237-806a-78207688f511  b5200b2a-ef3a-45ec-a5d6-45b28c41fcca.backy  de8285c3-af53-4967-a257-e66ea24f1020  de8285c3-af53-4967-a257-e66ea24f1020.backy
src/backy/tests/samples/scrub-inconsistent/: 528f6c52-d4a6-4237-806a-78207688f511  528f6c52-d4a6-4237-806a-78207688f511.backy  config  de8285c3-af53-4967-a257-e66ea24f1020  original.2
src/backy/tests/samples/simple_file/: config
vagrant/: Vagrantfile  ceph-server.sh
