[tool.black]
line-length = 80
target-version = [ "py310" ]

[tool.isort]
profile = "black"
line_length = 80
filter_files = true

[tool.scriv]
output_file = "CHANGES.txt"
version = "literal: pyproject.toml: tool.poetry.version"
entry_title_template = "{% if version %}{{ version }} {% endif %}({{ date.strftime('%Y-%m-%d') }})"
categories = ""

[tool.poetry]
name = "backy"
version = "2.6.0.dev0"
description = ""
authors = [
    "Christian Theune <ct@flyingcircus.io>",
    "Christian Kauhaus <kc@flyingcircus.io>",
    "Daniel Kraft <daniel.kraft@d9t.de>"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Archiving :: Backup"
]
packages = [
    { include = "backy", from = "src" }
]
license = "GPLv3"

[tool.poetry.dependencies]
python = "~3.10"
PyYAML = "^6.0.1"
consulate-fc-nix-test = "1.1.0a1"
humanize = "4.8.0"
mmh3 = "^4.0"
packaging = "^23.1"
python-lzo = "^1.15"
requests = "^2.31.0"
shortuuid = "^1.0.11"
structlog = "^23.1.0"
tzlocal = "^5.0"
colorama = "^0.4.6"
aiohttp = "^3.8.4"
rich = "^13.3.2"
yarl = "1.9.2"
frozenlist = "1.4.0"
aiofiles = "^23.2.1"
aioshutil = "^1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-aiohttp = "^1.0.4"
pytest-asyncio = "^0.23.3"
pytest-cache = "^1.0"
pytest-cov = "^4.1.0"
pytest-flake8 = "^1.1.1"
pytest-timeout = "^2.1.0"
scriv = "^1.3.1"
zest-releaser = "^9.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.'backy.sources']
file = 'backy.file:FileSource'
rbd = 'backy.rbd:RBDSource'
s3 = 'backy.s3:S3Source'

[tool.poetry.scripts]
backy = "backy.cli:main"
backyd = "backy.daemon:main"
backy-rbd = "backy.rbd:main"
backy-s3 = "backy.s3:main"
backy-file = "backy.file:main"

[[tool.mypy.overrides]]
module = "backy.*"
check_untyped_defs = true
